--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,7 +267,7 @@ body {
   height: -moz-fit-content;
   height: fit-content;
   padding-bottom: 6%;
-  background-image: url("../images/Website GIF to WebP.webp");
+  background-image: url("../images/Website-GIF.gif");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
