--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -258,7 +258,7 @@ body{
     height: fit-content;
     padding-bottom: 6%;
     // margin-bottom: 6%;
-    background-image: url("../images/Website GIF to WebP.webp");
+    background-image: url("../images/Website-GIF.gif");
     background-position: center;
     background-repeat: no-repeat;
     // background-size: contain;
