--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -258,7 +258,8 @@ body{
     height: fit-content;
     padding-bottom: 6%;
     // margin-bottom: 6%;
-    background-image: url("../images/Website-GIF.gif");
+    // background-image: url("../images/Website-GIF.gif");
+    background-image: url("https://www.crayond.com/crayond2020assets/Website-GIF.gif");
     background-position: center;
     background-repeat: no-repeat;
     // background-size: contain;
@@ -1446,6 +1447,13 @@ body{
                         padding-right: 100px;
                     }
                     .slider_discription{
+                        background-color: $color-white;
+                        border: 1px solid rgba(0,0,0,.125);
+                        padding: 30px 46px;
+                        border-radius: 25px;
+                        border-bottom-right-radius: 110px;
+                        border-top-left-radius: 85px;
+                        margin: auto;
                         .date{
                             font-size: 20px;
                             // color: $text-tertiary-color;
