--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -397,7 +397,8 @@ body{
             border-radius: 9px;
             // background-color: $card-background-color;
             // box-shadow: 0 20px 25px 0 rgba(51, 74, 192, 0.06);
-            height: 404px;
+            // height: 404px;
+            height: 375px;
             .card--head{
                 margin-top: 16px;
                 font-weight: bold;
