--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,224 @@ body {
   font-family: "fontLatoBlack";
 }
 
+/* Menu Header */
+.header_mobile {
+  border: solid 1px rgba(25, 34, 79, 0.08);
+  background: rgba(0, 0, 0, 0.9);
+  overflow: hidden;
+  height: 60px;
+  width: 100%;
+  z-index: 1;
+  position: fixed;
+  -webkit-transition: all 0.4s ease-out, background 1s ease-out;
+  transition: all 0.4s ease-out, background 1s ease-out;
+}
+
+.header_mobile.menu-open {
+  height: 100%;
+  background: #fff;
+  -webkit-transition: all 0.45s ease-out, background 0.8s ease-out;
+  transition: all 0.45s ease-out, background 0.8s ease-out;
+}
+
+/* Menu List items */
+.contact_btn {
+  color: #665CD7;
+  border-color: #665CD7;
+}
+
+.mobile-menu {
+  clear: both;
+}
+
+.header_mobile ul.menu {
+  position: relative;
+  display: block;
+  padding: 40px 40px 0;
+  list-style: none;
+}
+
+.header_mobile ul.menu li.menu-item a {
+  display: block;
+  position: relative;
+  color: #000;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 2.8;
+  width: 100%;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.header_mobile ul.menu li.menu-item {
+  border-bottom: 1px solid #333;
+  margin-top: 5px;
+  opacity: 0;
+  transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  -webkit-transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+
+.header_mobile ul.menu li.menu-item:nth-child(1) {
+  -webkit-transition-delay: 0.35s;
+          transition-delay: 0.35s;
+}
+
+.header_mobile ul.menu li.menu-item:nth-child(2) {
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
+}
+
+.header_mobile ul.menu li.menu-item:nth-child(3) {
+  -webkit-transition-delay: 0.25s;
+          transition-delay: 0.25s;
+}
+
+.header_mobile ul.menu li.menu-item:nth-child(4) {
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+.header_mobile ul.menu li.menu-item:nth-child(5) {
+  -webkit-transition-delay: 0.15s;
+          transition-delay: 0.15s;
+}
+
+.header_mobile ul.menu li.menu-item:nth-child(6) {
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+
+.header_mobile ul.menu li.menu-item:nth-child(7) {
+  -webkit-transition-delay: 0.05s;
+          transition-delay: 0.05s;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item {
+  opacity: 1;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(1) {
+  -webkit-transition-delay: 0.05s;
+          transition-delay: 0.05s;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(2) {
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(3) {
+  -webkit-transition-delay: 0.15s;
+          transition-delay: 0.15s;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(4) {
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(5) {
+  -webkit-transition-delay: 0.25s;
+          transition-delay: 0.25s;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(6) {
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
+}
+
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(7) {
+  -webkit-transition-delay: 0.35s;
+          transition-delay: 0.35s;
+}
+
+/* Menu Icon */
+.crayond_logo_mobile {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  left: 16px;
+  z-index: 2;
+  float: left;
+  /* Simply change property to float left to switch icon side :) */
+  height: 60px;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+
+.icon-container {
+  position: relative;
+  display: inline-block;
+  z-index: 2;
+  float: right;
+  /* Simply change property to float left to switch icon side :) */
+  height: 60px;
+  width: 55px;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+
+.icon-container #menuicon {
+  width: 20px;
+  height: 10px;
+  position: relative;
+  display: block;
+  margin: -4px auto 0;
+  top: 50%;
+}
+
+#menuicon .bar {
+  width: 100%;
+  height: 1px;
+  display: block;
+  position: relative;
+  background: #000;
+  -webkit-transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+
+#menuicon .bar.bar1 {
+  -webkit-transform: translateY(0px) rotate(0deg);
+  transform: translateY(0px) rotate(0deg);
+}
+
+#menuicon .bar.bar2 {
+  -webkit-transform: translateY(6px) rotate(0deg);
+  transform: translateY(6px) rotate(0deg);
+}
+
+.menu-open .icon-container {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.menu-open .icon-container #menuicon .bar {
+  -webkit-transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+
+.menu-open .icon-container #menuicon .bar.bar1 {
+  -webkit-transform: translateY(4px) rotate(45deg);
+  transform: translateY(4px) rotate(45deg);
+}
+
+.menu-open .icon-container #menuicon .bar.bar2 {
+  -webkit-transform: translateY(3px) rotate(-45deg);
+  transform: translateY(3px) rotate(-45deg);
+}
+
 .floatingNav {
   background: #ffffff;
   border-radius: 2px;
@@ -105,6 +323,47 @@ body {
 .nav-down {
   -webkit-box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
           box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
+}
+
+.header_mobile {
+  background-color: #ffffff;
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  top: 0;
+  height: 60px;
+}
+
+.header_mobile .logo_mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  height: 60px;
+}
+
+.header_mobile .logo_mobile a {
+  margin: auto 0;
+}
+
+.header_mobile .logo_mobile a img {
+  width: 120px;
+}
+
+.header_mobile .header_mobile_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  height: 60px;
+}
+
+.header_mobile .header_mobile_menu span {
+  margin: auto 0 auto auto;
+}
+
+.header_mobile .header_mobile_menu span i {
+  font-size: 20px;
 }
 
 .header {
@@ -1448,7 +1707,7 @@ body {
 }
 
 .about_crayond {
-  padding: 6% 0px;
+  padding: 0px 0px 6% 0px;
 }
 
 .about_crayond .text {
@@ -1542,29 +1801,8 @@ body {
   padding: 6% 16px;
 }
 
-.sliders_time_line .time_contantes .slide .carousel-inner .arrows {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  z-index: 12;
-}
-
-.sliders_time_line .time_contantes .slide .carousel-inner .arrows a {
-  padding: 10px 12px;
-  margin-right: 52px;
-  border-radius: 20px;
-  -webkit-box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
-          box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
-  border: solid 1px #e3e3e3;
-  background-color: #ffffff;
-}
-
-.sliders_time_line .time_contantes .slide .carousel-inner .arrows a i {
-  color: #383838;
-}
-
-.sliders_time_line .time_contantes .slide .carousel-inner .arrows .right {
-  padding: 10px 14px;
+.sliders_time_line .time_contantes .slide .carousel-inner {
+  margin-bottom: 40px;
 }
 
 .sliders_time_line .time_contantes .slide .carousel-inner .carousel-item .slider_img {
@@ -1577,7 +1815,7 @@ body {
   padding: 30px 46px;
   border-radius: 25px;
   border-bottom-right-radius: 110px;
-  border-top-left-radius: 85px;
+  border-top-left-radius: 65px;
   margin: auto;
 }
 
@@ -1595,6 +1833,30 @@ body {
   color: #595959;
   font-size: 20px;
   line-height: 46px;
+}
+
+.sliders_time_line .time_contantes .slide .arrows {
+  text-align: center;
+  z-index: 12;
+}
+
+.sliders_time_line .time_contantes .slide .arrows a {
+  padding: 10px 12px;
+  margin-right: 52px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+          box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+  border: solid 1px #e3e3e3;
+  background-color: #ffffff;
+}
+
+.sliders_time_line .time_contantes .slide .arrows a i {
+  color: #383838;
+}
+
+.sliders_time_line .time_contantes .slide .arrows .right {
+  margin-right: 0 !important;
+  padding: 10px 14px;
 }
 
 @media only screen and (min-width: 1440px) {
@@ -1665,7 +1927,11 @@ body {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+  .header_mobile {
+    display: block !important;
+  }
   .header {
+    display: none;
     position: fixed;
     top: 0;
     border-bottom: 1px solid #f1f1f1;
@@ -1917,7 +2183,7 @@ body {
     padding-right: 20px !important;
   }
   .time_contantes .slide .carousel-inner .carousel-item .slider_discription .date {
-    font-size: 14px !important;
+    font-size: 18px !important;
   }
   .time_contantes .slide .carousel-inner .carousel-item .slider_discription .titel {
     font-size: 22px !important;
@@ -1938,7 +2204,11 @@ body {
   body {
     overflow-x: hidden !important;
   }
+  .header_mobile {
+    display: block !important;
+  }
   .header {
+    display: none;
     position: fixed;
     top: 0;
     border-bottom: 1px solid #f1f1f1;
@@ -1952,7 +2222,7 @@ body {
   }
   .video_player video {
     position: absolute;
-    top: 68px;
+    top: 60px;
   }
   .title_section {
     height: 50%;
@@ -2266,13 +2536,34 @@ body {
   .our_culture .text p {
     font-size: 1.2rem;
   }
-  .time_contantes .slide .carousel-inner .arrows {
+  .time_contantes {
+    padding: 15% 16px !important;
+  }
+  .time_contantes .arrowslist {
+    position: absolute;
+    bottom: 15px;
+  }
+  .time_contantes .slide .carousel-inner .carousel-item .slider_img {
+    padding-right: 16px !important;
+    margin-bottom: 20px;
+  }
+  .time_contantes .slide .carousel-inner .carousel-item .slider_discription .date {
+    font-size: 16px !important;
+  }
+  .time_contantes .slide .carousel-inner .carousel-item .slider_discription .titel {
+    font-size: 26px !important;
+  }
+  .time_contantes .slide .carousel-inner .carousel-item .slider_discription .diccription {
+    font-size: 16px !important;
+    line-height: 2 !important;
+  }
+  .time_contantes .slide .arrows {
     position: absolute;
     top: 420px;
     width: 100%;
     z-index: 12;
   }
-  .time_contantes .slide .carousel-inner .arrows a {
+  .time_contantes .slide .arrows a {
     padding: 10px 12px;
     margin-right: 52px;
     border-radius: 20px;
@@ -2281,26 +2572,12 @@ body {
     border: solid 1px #e3e3e3;
     background-color: #ffffff;
   }
-  .time_contantes .slide .carousel-inner .arrows a i {
+  .time_contantes .slide .arrows a i {
     color: #383838;
   }
-  .time_contantes .slide .carousel-inner .arrows .right {
+  .time_contantes .slide .arrows .right {
     padding: 10px 14px;
     margin-right: 0 !important;
-  }
-  .time_contantes .slide .carousel-inner .carousel-item .slider_img {
-    padding-right: 16px !important;
-    margin-bottom: 20px;
-  }
-  .time_contantes .slide .carousel-inner .carousel-item .slider_discription .date {
-    font-size: 14px !important;
-  }
-  .time_contantes .slide .carousel-inner .carousel-item .slider_discription .titel {
-    font-size: 26px !important;
-  }
-  .time_contantes .slide .carousel-inner .carousel-item .slider_discription .diccription {
-    font-size: 16px !important;
-    line-height: 2 !important;
   }
 }
 /*# sourceMappingURL=styles.css.map */
