--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -96,6 +96,176 @@ body{
 .fontLatoBlack{
     font-family: "fontLatoBlack";
 }
+
+
+// moile menu style
+/* Menu Header */
+.header_mobile {
+    border: solid 1px rgba(25, 34, 79, 0.08);
+	background: rgba(0, 0, 0, 0.9);
+	overflow: hidden;
+	height: 60px;
+	width: 100%;
+	z-index: 1;
+	position: fixed;
+	transition: all 0.4s ease-out, background 1s ease-out;
+}
+.header_mobile.menu-open {
+	height: 100%;
+	background: #fff;
+	transition: all 0.45s ease-out, background 0.8s ease-out;
+}
+
+/* Menu List items */
+.contact_btn{
+    color: $primary-color;
+    border-color: $primary-color;
+}
+.mobile-menu {
+	clear: both;
+}
+.header_mobile ul.menu {
+	position: relative;
+	display: block;
+	padding: 40px 40px 0;
+	list-style: none;
+}
+.header_mobile ul.menu li.menu-item a {
+	display: block;
+	position: relative;
+	color: #000;
+	text-decoration: none;
+	font-size: 18px;
+	line-height: 2.8;
+	width: 100%;
+	-webkit-tap-highlight-color: transparent;
+}
+.header_mobile ul.menu li.menu-item {
+	border-bottom: 1px solid #333;
+	margin-top: 5px;
+	opacity: 0;
+	transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+	transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+	transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+.header_mobile ul.menu li.menu-item:nth-child(1) {
+	transition-delay: 0.35s;
+}
+.header_mobile ul.menu li.menu-item:nth-child(2) {
+	transition-delay: 0.3s;
+}
+.header_mobile ul.menu li.menu-item:nth-child(3) {
+	transition-delay: 0.25s;
+}
+.header_mobile ul.menu li.menu-item:nth-child(4) {
+	transition-delay: 0.2s;
+}
+.header_mobile ul.menu li.menu-item:nth-child(5) {
+	transition-delay: 0.15s;
+}
+.header_mobile ul.menu li.menu-item:nth-child(6) {
+	transition-delay: 0.1s;
+}
+.header_mobile ul.menu li.menu-item:nth-child(7) {
+	transition-delay: 0.05s;
+}
+.header_mobile.menu-open ul.menu li.menu-item {
+	opacity: 1;
+}
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(1) {
+	transition-delay: 0.05s;
+}
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(2) {
+	transition-delay: 0.1s;
+}
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(3) {
+	transition-delay: 0.15s;
+}
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(4) {
+	transition-delay: 0.2s;
+}
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(5) {
+	transition-delay: 0.25s;
+}
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(6) {
+	transition-delay: 0.3s;
+}
+.header_mobile.menu-open ul.menu li.menu-item:nth-child(7) {
+	transition-delay: 0.35s;
+}
+
+/* Menu Icon */
+.crayond_logo_mobile {
+	position: relative;
+    display: flex;
+    left: 16px;
+	z-index: 2;
+	float: left;
+	/* Simply change property to float left to switch icon side :) */
+	height: 60px;
+	// width: 55px;
+	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
+	-webkit-transform: rotate(0deg);
+	transform: rotate(0deg);
+	transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+.icon-container {
+	position: relative;
+	display: inline-block;
+	z-index: 2;
+	float: right;
+	/* Simply change property to float left to switch icon side :) */
+	height: 60px;
+	width: 55px;
+	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
+	-webkit-transform: rotate(0deg);
+	transform: rotate(0deg);
+	transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+.icon-container #menuicon {
+	width: 20px;
+	height: 10px;
+	position: relative;
+	display: block;
+	margin: -4px auto 0;
+	top: 50%;
+}
+#menuicon .bar {
+	width: 100%;
+	height: 1px;
+	display: block;
+	position: relative;
+	background: #000;
+	transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+#menuicon .bar.bar1 {
+	-webkit-transform: translateY(0px) rotate(0deg);
+	transform: translateY(0px) rotate(0deg);
+}
+#menuicon .bar.bar2 {
+	-webkit-transform: translateY(6px) rotate(0deg);
+	transform: translateY(6px) rotate(0deg);
+}
+.menu-open .icon-container {
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
+.menu-open .icon-container #menuicon .bar {
+	transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+	transition-delay: 0.1s;
+}
+.menu-open .icon-container #menuicon .bar.bar1 {
+	-webkit-transform: translateY(4px) rotate(45deg);
+	transform: translateY(4px) rotate(45deg);
+}
+.menu-open .icon-container #menuicon .bar.bar2 {
+	-webkit-transform: translateY(3px) rotate(-45deg);
+	transform: translateY(3px) rotate(-45deg);
+}
+
+
 // Header css
 .floatingNav {
     background: #ffffff;
@@ -119,6 +289,37 @@ body{
 }
 .nav-down{
     box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
+}
+
+.header_mobile{
+    background-color: $color-white;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    top: 0;
+    height: 60px;
+    .logo_mobile{
+        display: flex;
+        padding: 0;
+        height: 60px;
+        a{
+            margin: auto 0;
+            img{
+                width: 120px;
+            }
+        }
+    }
+    .header_mobile_menu{
+        display: flex;
+        padding: 0;
+        height: 60px;
+        span{
+            margin: auto 0 auto auto;
+            i{
+                font-size: 20px;
+            }
+        }
+    }
 }
 
 .header {
@@ -1336,7 +1537,7 @@ body{
     }
 }
 .about_crayond{
-    padding: 6% 0px;
+    padding: 0px 0px 6% 0px;
    .text{
        text-align: center;
    }
@@ -1421,28 +1622,7 @@ body{
         padding: 6% 16px;
         .slide{
             .carousel-inner{
-                .arrows{
-                    position: absolute;
-                    bottom: 20px;
-                    width: 100%;
-                    z-index: 12;
-                    a{
-                        padding: 10px 12px;
-                        margin-right: 52px;
-                        // background-color: aquamarine;
-                        border-radius: 20px;
-
-                        box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
-                        border: solid 1px #e3e3e3;
-                        background-color: #ffffff;
-                        i{
-                            color: $text-secondary-color;
-                        }
-                    }
-                    .right{
-                        padding: 10px 14px;
-                    }
-                }
+                margin-bottom: 40px;
                 .carousel-item{
                     .slider_img{
                         padding-right: 100px;
@@ -1453,7 +1633,7 @@ body{
                         padding: 30px 46px;
                         border-radius: 25px;
                         border-bottom-right-radius: 110px;
-                        border-top-left-radius: 85px;
+                        border-top-left-radius: 65px;
                         margin: auto;
                         .date{
                             font-size: 20px;
@@ -1471,6 +1651,30 @@ body{
                             line-height: 46px;
                         }
                     }
+                }
+            }
+            .arrows{
+                text-align: center;
+                // position: absolute;
+                // bottom: 20px;
+                // width: 100%;
+                z-index: 12;
+                a{
+                    padding: 10px 12px;
+                    margin-right: 52px;
+                    // background-color: aquamarine;
+                    border-radius: 20px;
+
+                    box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+                    border: solid 1px #e3e3e3;
+                    background-color: #ffffff;
+                    i{
+                        color: $text-secondary-color;
+                    }
+                }
+                .right{
+                    margin-right: 0 !important;
+                    padding: 10px 14px;
                 }
             }
         }
@@ -1605,7 +1809,16 @@ body{
 }
 // Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+    .header_mobile{
+        display: block !important;
+        .logo_mobile{
+            img{
+                // width: 120px;
+            }
+        }
+    }
     .header{
+        display: none;
         position: fixed;
         top: 0;
         border-bottom: 1px solid #f1f1f1;
@@ -1975,7 +2188,7 @@ body{
                     }
                     .slider_discription{
                         .date{
-                            font-size: 14px !important;
+                            font-size: 18px !important;
                         }
                         .titel{
                             font-size: 22px !important;
@@ -2012,7 +2225,11 @@ body{
   body{
     overflow-x: hidden !important; 
   }
+  .header_mobile{
+      display: block !important;
+  }
   .header{
+      display: none;
     position: fixed;
     top: 0;
     border-bottom: 1px solid #f1f1f1;
@@ -2032,7 +2249,7 @@ body{
     //   display: none;
     video{
         position: absolute;
-        top: 68px;
+        top: 60px;
     }
   }
   .title_section{
@@ -2433,32 +2650,13 @@ body{
 }
 
 .time_contantes{
+    padding: 15% 16px !important;
+    .arrowslist{
+        position: absolute;
+        bottom: 15px;
+    }
     .slide{
         .carousel-inner{
-            .arrows{
-                position: absolute;
-                // bottom: 20px;
-                top: 420px;
-                width: 100%;
-                z-index: 12;
-                a{
-                    padding: 10px 12px;
-                    margin-right: 52px;
-                    // background-color: aquamarine;
-                    border-radius: 20px;
-
-                    box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
-                    border: solid 1px #e3e3e3;
-                    background-color: #ffffff;
-                    i{
-                        color: $text-secondary-color;
-                    }
-                }
-                .right{
-                    padding: 10px 14px;
-                    margin-right: 0 !important;
-                }
-            }
             .carousel-item{
                 .slider_img{
                     padding-right: 16px !important;
@@ -2466,7 +2664,7 @@ body{
                 }
                 .slider_discription{
                     .date{
-                        font-size: 14px !important;
+                        font-size: 16px !important;
                     }
                     .titel{
                         font-size: 26px !important;
@@ -2478,7 +2676,33 @@ body{
                 }
             }
         }
+        .arrows{
+            position: absolute;
+            // bottom: 20px;
+            top: 420px;
+            width: 100%;
+            z-index: 12;
+            a{
+                padding: 10px 12px;
+                margin-right: 52px;
+                // background-color: aquamarine;
+                border-radius: 20px;
+
+                box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+                border: solid 1px #e3e3e3;
+                background-color: #ffffff;
+                i{
+                    color: $text-secondary-color;
+                }
+            }
+            .right{
+                padding: 10px 14px;
+                margin-right: 0 !important;
+            }
+        }
     }
 }
+
+
 
 }
