--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,13 @@ body {
   font-family: "fontLatoBlack";
 }
 
+.carousel-innerr > .carousel-item {
+  -webkit-transition: -webkit-transform 1.2s ease-in-out !important;
+  transition: -webkit-transform 1.2s ease-in-out !important;
+  transition: transform 1.2s ease-in-out !important;
+  transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out !important;
+}
+
 /* Menu Header */
 .header_mobile {
   border: solid 1px rgba(25, 34, 79, 0.08);
@@ -1633,10 +1640,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   text-align: center;
+  padding-top: 106px;
 }
 
 .title_section .container {
-  margin: auto auto 80px auto;
+  margin: auto;
 }
 
 .title_section .container .who_you_are_title p {
@@ -1707,7 +1715,8 @@ body {
 }
 
 .about_crayond {
-  padding: 0px 0px 6% 0px;
+  padding: 6% 0px 0px 0px;
+  background-color: #fafafa;
 }
 
 .about_crayond .text {
@@ -1715,7 +1724,7 @@ body {
 }
 
 .our_culture {
-  padding: 6% 0px;
+  padding: 6% 0px 3% 0px;
 }
 
 .our_culture h1 {
@@ -1726,7 +1735,7 @@ body {
 
 .our_culture .text {
   text-align: center;
-  padding-top: 6%;
+  padding-top: 3%;
   font-size: 1.4rem;
 }
 
@@ -1736,7 +1745,7 @@ body {
 }
 
 .our_team_who_we_are {
-  padding: 6% 0px;
+  padding: 0px 0px 6% 0px;
 }
 
 .our_team_who_we_are h1 {
@@ -1781,15 +1790,17 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border-bottom: 1.5px solid  #e9ecef;
+  border-top: 1.5px solid  #e9ecef;
 }
 
 .sliders_time_line .time_line_list .active {
-  color: #665CD7;
-  border-bottom: 1.5px solid #665CD7 !important;
+  color: #665CD7 !important;
+  font-weight: 600;
+  border-top: 1.5px solid #665CD7 !important;
 }
 
 .sliders_time_line .time_line_list .time_line_years {
+  color: #878787;
   cursor: pointer;
   padding: 10px 5px;
   margin: auto;
@@ -1798,7 +1809,7 @@ body {
 
 .sliders_time_line .time_contantes {
   background-color: rgba(0, 0, 0, 0.02);
-  padding: 6% 16px;
+  padding: 2% 16px 6% 16px;
 }
 
 .sliders_time_line .time_contantes .slide .carousel-inner {
@@ -1817,6 +1828,7 @@ body {
   border-bottom-right-radius: 110px;
   border-top-left-radius: 65px;
   margin: auto;
+  height: 340px;
 }
 
 .sliders_time_line .time_contantes .slide .carousel-inner .carousel-item .slider_discription .date {
@@ -1874,7 +1886,7 @@ body {
     padding-bottom: 6%;
   }
   .title_section .container {
-    margin: auto auto 200px auto;
+    margin: auto;
   }
   .title_section .container .who_you_are_title p {
     margin-bottom: 0;
@@ -2140,6 +2152,9 @@ body {
   }
   .join_team .billion p {
     font-size: 19px;
+  }
+  .title_section {
+    padding-top: 0;
   }
   .title_section .container .who_you_are_title p {
     font-size: 3rem;
@@ -2505,10 +2520,14 @@ body {
     width: 250px !important;
   }
   .our_vis_mis .mobile_title {
+    text-align: center;
     display: block !important;
   }
+  .our_vis_mis .vission .card img {
+    width: 8%;
+  }
   .our_vis_mis .vission .card .card_body {
-    height: 500px;
+    height: 472px;
     padding: 12% 12% 12% 12%;
   }
   .our_vis_mis .vission .card .card_body h1 {
@@ -2518,7 +2537,7 @@ body {
     font-size: 1.2rem;
   }
   .our_vis_mis .mission .card .card_body {
-    height: 500px;
+    height: 472px;
     padding: 12% 12% 12% 12%;
   }
   .our_vis_mis .mission .card .card_body h1 {
@@ -2526,6 +2545,9 @@ body {
   }
   .our_vis_mis .mission .card .card_body p {
     font-size: 1.2rem;
+  }
+  .about_crayond {
+    padding: 8% 0px 0px 0px !important;
   }
   .about_crayond .text h1 {
     font-size: 2.1rem;
@@ -2536,8 +2558,11 @@ body {
   .our_culture .text p {
     font-size: 1.2rem;
   }
+  .our_culture .card_div img {
+    width: 100%;
+  }
   .time_contantes {
-    padding: 15% 16px !important;
+    padding: 5% 16px 15% 16px !important;
   }
   .time_contantes .arrowslist {
     position: absolute;
@@ -2578,6 +2603,12 @@ body {
   .time_contantes .slide .arrows .right {
     padding: 10px 14px;
     margin-right: 0 !important;
+  }
+  .our_team_who_we_are {
+    padding: 0px 0px 10% 0px;
+  }
+  .our_team_who_we_are .text h1 {
+    font-size: 2.1rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
