--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,6 +82,26 @@ body {
   transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out !important;
 }
 
+#pre-loader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-size: 150% 150%;
+  position: fixed;
+  top: 0;
+  background-color: #ffffff;
+  z-index: 99999999;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-content: center;
+}
+
 /* Menu Header */
 .header_mobile {
   border: solid 1px rgba(25, 34, 79, 0.08);
