--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -102,7 +102,20 @@ body{
     -o-transition: -o-transform 1.2s ease-in-out !important;
     transition: transform 1.2s ease-in-out !important;
 }
-
+// loader
+#pre-loader{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-size: 150% 150%;
+    position: fixed;
+    top: 0;
+    background-color: #ffffff;
+    z-index: 99999999;
+    align-items:center;
+    justify-content:center;
+}
 // moile menu style
 /* Menu Header */
 .header_mobile {
