--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -513,7 +513,7 @@ body{
     border: none;
     font-weight: 700;
     border-radius: 5px;
-    transition: 0.5s;
+    // transition: 0.5s;
     // box-shadow: 0 20px 25px 0 rgba(51, 74, 192, 0.06);
     position: relative;
     bottom: 0px;
