--- a/styles/styles.css
+++ b/styles/styles.css
@@ -396,7 +396,7 @@ body {
 .header {
   overflow: hidden;
   background-color: #ffffff;
-  padding: 20px 10px 20px 10px;
+  padding: 8px 10px 8px 10px;
   width: 100%;
   z-index: 12;
   position: fixed;
@@ -454,7 +454,7 @@ body {
   color: #43434b;
   font-size: 1rem;
   margin: auto;
-  padding: 15px 0px;
+  padding: 10px 0px;
   cursor: pointer;
   border-bottom: 2px solid transparent;
 }
@@ -483,7 +483,7 @@ body {
 
 .header .row .sign_btn button {
   width: 148px;
-  height: 51px;
+  height: 46px;
   -webkit-box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
           box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
   font-size: 16px;
@@ -2267,6 +2267,7 @@ body {
     display: none;
   }
   .header_text {
+    background-image: none;
     position: unset !important;
     margin-top: 15%;
     padding-bottom: 90px;
@@ -2274,7 +2275,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: calc(100vh - 95px);
+    height: unset;
     background-size: contain;
   }
   .banner_text_1 {
@@ -2589,6 +2590,9 @@ body {
     position: absolute;
     bottom: 15px;
   }
+  .time_contantes .slide .carousel-inner {
+    margin-bottom: 0px !important;
+  }
   .time_contantes .slide .carousel-inner .carousel-item {
     padding: 0px 15px;
   }
@@ -2597,7 +2601,9 @@ body {
     margin-bottom: 20px;
   }
   .time_contantes .slide .carousel-inner .carousel-item .slider_discription {
+    min-height: 340px !important;
     padding: 30px !important;
+    height: unset !important;
   }
   .time_contantes .slide .carousel-inner .carousel-item .slider_discription .date {
     font-size: 16px !important;
@@ -2610,6 +2616,7 @@ body {
     line-height: 2 !important;
   }
   .time_contantes .slide .arrows {
+    display: none !important;
     position: absolute;
     top: 420px;
     width: 100%;
@@ -2642,6 +2649,44 @@ body {
   }
   .banner_button {
     width: 255px !important;
+  }
+  .carousel-control-prev {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
+  .carousel-control-next {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
+  .mobile_arrow_right {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    padding: 13px 13px;
+    border-radius: 50px;
+    -webkit-box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+            box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+    border: solid 1px #e3e3e3;
+    background-color: #ffffff;
+  }
+  .mobile_arrow_right i {
+    padding-left: 4px;
+  }
+  .mobile_arrow_left {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    padding: 13px 13px;
+    border-radius: 50px;
+    -webkit-box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+            box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+    border: solid 1px #e3e3e3;
+    background-color: #ffffff;
+  }
+  .mobile_arrow_left i {
+    padding-right: 5px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
