--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,14 +129,20 @@ body {
 }
 
 .mobile-menu {
+  background-color: #665CD7;
+  height: 100%;
+  text-align: center;
   clear: both;
 }
 
 .header_mobile ul.menu {
   position: relative;
   display: block;
-  padding: 40px 40px 0;
+  background-color: #fff;
+  padding: 40px 0px 30px;
   list-style: none;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
 .header_mobile ul.menu li.menu-item a {
@@ -151,13 +157,25 @@ body {
 }
 
 .header_mobile ul.menu li.menu-item {
-  border-bottom: 1px solid #333;
-  margin-top: 5px;
   opacity: 0;
   transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
   -webkit-transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
   transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
   transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+
+.header_mobile ul.menu li.active {
+  background-color: rgba(100, 85, 194, 0.05);
+  color: #665CD7;
+  opacity: 0;
+  transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  -webkit-transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+
+.header_mobile ul.menu li.active a {
+  color: #665CD7;
 }
 
 .header_mobile ul.menu li.menu-item:nth-child(1) {
@@ -299,6 +317,7 @@ body {
 }
 
 .menu-open .icon-container {
+  display: none;
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
@@ -318,6 +337,11 @@ body {
 .menu-open .icon-container #menuicon .bar.bar2 {
   -webkit-transform: translateY(3px) rotate(-45deg);
   transform: translateY(3px) rotate(-45deg);
+}
+
+.menu-open .crayond_logo_mobile {
+  left: 0 !important;
+  float: unset !important;
 }
 
 .floatingNav {
