--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -140,13 +140,20 @@ body{
     border-color: $primary-color;
 }
 .mobile-menu {
+    background-color: $primary-color;
+    height: 100%;
+    text-align: center;
 	clear: both;
 }
 .header_mobile ul.menu {
 	position: relative;
-	display: block;
-	padding: 40px 40px 0;
-	list-style: none;
+    display: block;
+    background-color: #fff;
+    padding: 40px 0px 30px;
+    list-style: none;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    
 }
 .header_mobile ul.menu li.menu-item a {
 	display: block;
@@ -159,8 +166,21 @@ body{
 	-webkit-tap-highlight-color: transparent;
 }
 .header_mobile ul.menu li.menu-item {
-	border-bottom: 1px solid #333;
-	margin-top: 5px;
+	// border-bottom: 1px solid #333;
+	// margin-top: 5px;
+	opacity: 0;
+	transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+	transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+	transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+.header_mobile ul.menu li.active {
+    a{
+        color: $primary-color;
+    }
+	// border-bottom: 1px solid #333;
+    // margin-top: 5px;
+    background-color: rgba(100, 85, 194, 0.05); 
+    color: $primary-color;
 	opacity: 0;
 	transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
 	transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
@@ -267,6 +287,7 @@ body{
 	transform: translateY(6px) rotate(0deg);
 }
 .menu-open .icon-container {
+    display: none;
 	-webkit-transform: rotate(90deg);
 	transform: rotate(90deg);
 }
@@ -281,6 +302,11 @@ body{
 .menu-open .icon-container #menuicon .bar.bar2 {
 	-webkit-transform: translateY(3px) rotate(-45deg);
 	transform: translateY(3px) rotate(-45deg);
+}
+
+.menu-open .crayond_logo_mobile{
+    left: 0 !important;
+    float: unset !important;
 }
 
 
