--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,7 +104,7 @@ body {
 
 /* Menu Header */
 .header_mobile {
-  border: solid 1px rgba(25, 34, 79, 0.08);
+  border-bottom: solid 1px rgba(25, 34, 79, 0.08);
   background: rgba(0, 0, 0, 0.9);
   overflow: hidden;
   height: 60px;
@@ -258,9 +258,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  left: 16px;
   z-index: 2;
-  float: left;
   /* Simply change property to float left to switch icon side :) */
   height: 60px;
   cursor: pointer;
@@ -272,9 +270,11 @@ body {
 }
 
 .icon-container {
-  position: relative;
+  position: absolute;
   display: inline-block;
   z-index: 2;
+  top: 0;
+  right: 0;
   float: right;
   /* Simply change property to float left to switch icon side :) */
   height: 60px;
@@ -337,11 +337,6 @@ body {
 .menu-open .icon-container #menuicon .bar.bar2 {
   -webkit-transform: translateY(3px) rotate(-45deg);
   transform: translateY(3px) rotate(-45deg);
-}
-
-.menu-open .crayond_logo_mobile {
-  left: 0 !important;
-  float: unset !important;
 }
 
 .floatingNav {
@@ -420,7 +415,7 @@ body {
 .header {
   overflow: hidden;
   background-color: #ffffff;
-  padding: 8px 10px 8px 10px;
+  padding: 12px 10px 12px 10px;
   width: 100%;
   z-index: 12;
   position: fixed;
@@ -1854,10 +1849,6 @@ body {
   padding: 2% 16px 6% 16px;
 }
 
-.sliders_time_line .time_contantes .slide .carousel-inner {
-  margin-bottom: 40px;
-}
-
 .sliders_time_line .time_contantes .slide .carousel-inner .carousel-item .slider_img {
   padding-right: 100px;
 }
@@ -1911,6 +1902,38 @@ body {
 .sliders_time_line .time_contantes .slide .arrows .right {
   margin-right: 0 !important;
   padding: 10px 14px;
+}
+
+.mobile_arrow_right {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  padding: 13px 13px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+          box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+  border: solid 1px #e3e3e3;
+  background-color: #ffffff;
+}
+
+.mobile_arrow_right i {
+  padding-left: 4px;
+}
+
+.mobile_arrow_left {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  padding: 13px 13px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+          box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.05);
+  border: solid 1px #e3e3e3;
+  background-color: #ffffff;
+}
+
+.mobile_arrow_left i {
+  padding-right: 5px;
 }
 
 @media only screen and (min-width: 1440px) {
