--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1606,7 +1606,7 @@ body{
     .card_div{
         img{
             width: 80%;
-            // margin: auto;
+            margin: auto;
         }
     }
 }
@@ -2732,6 +2732,7 @@ body{
     .card_div{
         img{
             width: 100%;
+            height: 100%;
         }
     }
 }
