--- a/styles/styles.css
+++ b/styles/styles.css
@@ -501,6 +501,7 @@ body {
 }
 
 .header .row .sign_btn button {
+  margin: auto 0 auto auto;
   width: 148px;
   height: 46px;
   -webkit-box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
@@ -1109,6 +1110,10 @@ body {
   padding-bottom: 30px;
 }
 
+.next_billion .billion .titel_button img {
+  width: 60px;
+}
+
 .next_billion .billion .titel_button .button {
   padding: 15px 30px;
   background-color: rgba(255, 255, 255, 0.1);
@@ -1592,7 +1597,7 @@ body {
 }
 
 .join_team {
-  background-color: #2d3e50;
+  background-color: #242438;
   text-align: center;
   position: relative;
 }
@@ -1647,9 +1652,9 @@ body {
 .join_team .billion .button_div .banner_button {
   cursor: pointer;
   padding: 18px 30px;
-  background-color: #ffffff;
+  background-color: #665CD7;
   font-size: 16px;
-  color: #665CD7;
+  color: #ffffff;
   border: none;
   font-weight: 700;
   border-radius: 5px;
