--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,4 @@
-$primary-color_1: #334ac0;
+// $primary-color_1: #334ac0;
 // v1
 // $primary-color: #334AC0;
 // v2
@@ -2222,6 +2222,10 @@ body{
         }
     }
     .our_vis_mis{
+        padding: 0;
+        .who_you_are_title_sort{
+            margin-top: 60px;
+        }
         .vission{
             .card {
                 img{
@@ -2707,9 +2711,13 @@ body{
 
 // .who_you_are
 .our_vis_mis{
+    padding: 0;
     .mobile_title{
         text-align: center;
         display: block !important;
+    }
+    .who_you_are_title_sort{
+        margin-top: 60px;
     }
     .vission{
         .card{
