--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -52,6 +52,12 @@ body{
     src: url("../plugin/fonts/graphik/GraphikLight.otf");
 }
 
+
+@font-face {
+    font-family: "fontNova";
+    src: url("../plugin/fonts/HKNova-Medium.otf");
+}
+
 @font-face {
     font-family: "fontLatoRegular";
     src: url("../plugin/fonts/lato/Lato-Regular.ttf");
@@ -95,6 +101,10 @@ body{
 }
 .fontLatoBlack{
     font-family: "fontLatoBlack";
+}
+
+.fontNova{
+    font-family: "fontNova";
 }
 
 .carousel-innerr >.carousel-item {
