--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1951,6 +1951,9 @@ body{
         // height: 50vh;
         // margin-bottom: 60vh;
     }
+    .whe_we_are_video_player{
+        top: 60px !important;
+    }
     .header_text{
         top: 65px;
         .banner_text_1{
@@ -2369,6 +2372,9 @@ body{
   .first_section{
     //   height: calc(100vh - 85px);
     //   height: 100% !important;
+  }
+  .whe_we_are_video_player{
+      top: 60px !important;
   }
   .video_player{
     //   display: none;
